# ai-automation-testing

./: .env  .gitignore  AGENTS_MCP_QUICKSTART.md  AGENTS_MCP_STRUCTURE.md  CODE_CLEANUP_REPORT.md  EXTENSION_DEPENDENCIES.md  LANGGRAPH_EXAMPLES.md  LANGGRAPH_MIGRATION.md  POSTGRESQL_RAG_IMPLEMENTATION.md  PROJECT_ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  delete_namespace.py  pyproject.toml  requirements.txt  test_langgraph_agents.py
Backend/: .env  main.py  test_mongodb.py
Backend/Models/: Model.py  langgraph_model.py
Backend/ai_agents/: __init__.py  base_agent.py  clonerepo_agent.py  context_agent_node.py  document_agent.py  gitrepo_agent.py  query_agent.py  rag_agent.py  testcase_agent_node.py
Backend/app/: main.py
Backend/app/api/: routes.py  schemas.py
Backend/prompts/: context_prompt.py  testcase_generate_prompt.py
Backend/states/: __init__.py  base_state.py  structured_context.py  test_case_state.py
Backend/tools/: jira_fetch_tool.py  pinecone_tool.py
Backend/utils/: MangoDB.py  chunking.py  embedding.py  filter.py  jira_api.py  langgraph_agent.py  parse_text.py  pinecone_store.py  postgres.py  postgres_indexer.py  postgres_rag.py  utils.py  visualize_graph.py
Frontend/: .env  app.py
data/json_files/: jira_stories.json
git_agent/: clonerepo_agent.py  gitrepo_agent.py
mcp_server/: __init__.py  config.py  server.py
mcp_server/handlers/: __init__.py  base_handler.py  tool_handler.py
mcp_server/tools/: __init__.py  base_tool.py  jira_tool.py  mongodb_tool.py  pinecone_tool.py  postgresql_tool.py
(+3 files in other folders)
